add composer scripts

--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,11 @@
             "/Tests/"
         ]
     },
+    "scripts": {
+        "test": "vendor/bin/phpunit --configuration phpunit.xml.dist",
+        "fixer": "vendor/bin/php-cs-fixer fix -v",
+        "linter": "vendor/bin/php-cs-fixer fix --config=.php_cs.dist -v --dry-run --stop-on-violation && vendor/bin/phpcpd ./ --exclude vendor --exclude tests && vendor/bin/psalm --show-info=true"
+    },
     "repositories": [
         {
             "type": "git",
