set php version in actions to 7.4

--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -16,11 +16,14 @@ jobs:
 
     - name: Validate composer.json and composer.lock
       run: composer validate
+      with:
+          php-version: '7.4'
 
     - name: Cache Composer packages
       id: composer-cache
       uses: actions/cache@v2
       with:
+        php-version: '7.4'
         path: vendor
         key: ${{ runner.os }}-php-${{ hashFiles('**/composer.lock') }}
         restore-keys: |
@@ -29,9 +32,15 @@ jobs:
     - name: Install dependencies
       if: steps.composer-cache.outputs.cache-hit != 'true'
       run: composer install --prefer-dist --no-progress --no-suggest
+      with:
+          php-version: '7.4'
 
     - name: Run test suite
       run: composer run-script test
-      
+      with:
+          php-version: '7.4'
+
     - name: Run linters
       run: composer run-script linter
+      with:
+          php-version: '7.4'
