--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -19,6 +19,14 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
+    - name: Install PHP
+      uses: shivammathur/setup-php@v2
+      with:
+        php-version: ${{ matrix.php-versions }}
+
+    - name: Check PHP Version
+      run: php -v
+
     - name: Validate composer.json and composer.lock
       run: composer validate
 
