--- a/Resources/config/services.yaml
+++ b/Resources/config/services.yaml
@@ -3,7 +3,7 @@ services:
   Marvin255\RandomStringGenerator\RandomEngine\RandomEngine:
     class: Marvin255\RandomStringGenerator\RandomEngine\MtRandomEngine
 
-  Marvin255\RandomStringGenerator\RandomStringGenerator\RandomStringGenerator:
-    class: Marvin255\RandomStringGenerator\RandomStringGenerator\BasicRandomStringGenerator
+  Marvin255\RandomStringGenerator\Generator\RandomStringGenerator:
+    class: Marvin255\RandomStringGenerator\Generator\BasicRandomStringGenerator
     arguments:
       - '@Marvin255\RandomStringGenerator\RandomEngine\RandomEngine'
