--- a/Docker/php/Dockerfile
+++ b/Docker/php/Dockerfile
@@ -21,7 +21,8 @@ RUN docker-php-ext-install zip pcntl sockets \
     && pecl install xdebug \
     && docker-php-ext-enable xdebug \
     && docker-php-source delete \
-    && echo 'date.timezone=Europe/London' >> /usr/local/etc/php/conf.d/php-date.ini
+    && echo 'date.timezone=Europe/London' >> /usr/local/etc/php/conf.d/php-date.ini \
+    && echo 'xdebug.mode=coverage' >> /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini
 
 
 RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer  --version=2.0.1 \
