--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
     },
     "scripts": {
         "test": "vendor/bin/phpunit --configuration phpunit.xml.dist",
-        "fixer": "vendor/bin/php-cs-fixer fix -v",
+        "coverage": "vendor/bin/phpunit --configuration phpunit.xml.dist --coverage-html=Tests/coverage",
+        "fixer": "vendor/bin/php-cs-fixer fix --config=.php_cs.dist -v",
         "linter": "vendor/bin/php-cs-fixer fix --config=.php_cs.dist -v --dry-run --stop-on-violation && vendor/bin/phpcpd ./ --exclude vendor --exclude tests && vendor/bin/psalm --show-info=true"
     },
     "repositories": [
