--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
         "test": "vendor/bin/phpunit --configuration phpunit.xml.dist",
         "coverage": "vendor/bin/phpunit --configuration phpunit.xml.dist --coverage-html=Tests/coverage",
         "fixer": "vendor/bin/php-cs-fixer fix --config=.php_cs.dist -v",
-        "linter": "vendor/bin/php-cs-fixer fix --config=.php_cs.dist -v --dry-run --stop-on-violation && vendor/bin/phpcpd ./ --exclude vendor --exclude tests && vendor/bin/psalm --show-info=true"
+        "linter": "vendor/bin/php-cs-fixer fix --config=.php_cs.dist -v --dry-run --stop-on-violation && vendor/bin/phpcpd ./ --exclude vendor && vendor/bin/psalm --show-info=true"
     },
     "repositories": [
         {
