--- a/composer.json
+++ b/composer.json
@@ -10,9 +10,11 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^9.0",
+        "symfony/phpunit-bridge": "^5.0",
         "friendsofphp/php-cs-fixer": "^2.16",
         "sebastian/phpcpd": "^6.0",
-        "vimeo/psalm": "^4.0"
+        "vimeo/psalm": "^4.0",
+        "psalm/plugin-phpunit": "^0.15.1"
     },
     "autoload": {
         "psr-4": {
@@ -25,13 +27,11 @@
     "scripts": {
         "test": "vendor/bin/phpunit --configuration phpunit.xml.dist",
         "coverage": "vendor/bin/phpunit --configuration phpunit.xml.dist --coverage-html=Tests/coverage",
-        "fixer": "vendor/bin/php-cs-fixer fix --config=.php_cs.dist -v",
-        "linter": "vendor/bin/php-cs-fixer fix --config=.php_cs.dist -v --dry-run --stop-on-violation && vendor/bin/phpcpd ./ --exclude vendor && vendor/bin/psalm --show-info=true"
-    },
-    "repositories": [
-        {
-            "type": "git",
-            "url": "https://github.com/marvin255/random-string-generator"
-        }
-    ]
+        "fixer": "vendor/bin/php-cs-fixer fix --config=.php-cs-fixer.dist.php -vv --allow-risky=yes",
+        "linter": [
+            "vendor/bin/php-cs-fixer fix --config=.php-cs-fixer.dist.php -vv --allow-risky=yes --dry-run --stop-on-violation",
+            "vendor/bin/phpcpd ./ --exclude vendor",
+            "vendor/bin/psalm --show-info=true"
+        ]
+    }
 }
