--- a/composer.json
+++ b/composer.json
@@ -6,15 +6,15 @@
     "license": "MIT",
     "require": {
         "php": ">=7.4.0",
-        "symfony/framework-bundle": "^5.0"
+        "symfony/framework-bundle": "^5.0|^6.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^9.0",
-        "symfony/phpunit-bridge": "^5.0",
+        "phpunit/phpunit": "^9.0|^10.0",
+        "symfony/phpunit-bridge": "^5.0|^6.0",
         "friendsofphp/php-cs-fixer": "^3.0",
         "sebastian/phpcpd": "^6.0",
         "vimeo/psalm": "^4.0",
-        "psalm/plugin-phpunit": "^0.15.1"
+        "psalm/plugin-phpunit": "^0.16"
     },
     "autoload": {
         "psr-4": {
@@ -25,13 +25,19 @@
         ]
     },
     "scripts": {
-        "test": "vendor/bin/phpunit --configuration phpunit.xml.dist",
-        "coverage": "vendor/bin/phpunit --configuration phpunit.xml.dist --coverage-html=Tests/coverage",
-        "fixer": "vendor/bin/php-cs-fixer fix --config=.php-cs-fixer.dist.php -vv --allow-risky=yes",
+        "test": [
+            "vendor/bin/phpunit --configuration phpunit.xml.dist"
+        ],
+        "coverage": [
+            "vendor/bin/phpunit --configuration phpunit.xml.dist --coverage-html=Tests/coverage"
+        ],
+        "fixer": [
+            "vendor/bin/php-cs-fixer fix --config=.php-cs-fixer.dist.php -vv --allow-risky=yes"
+        ],
         "linter": [
             "vendor/bin/php-cs-fixer fix --config=.php-cs-fixer.dist.php -vv --allow-risky=yes --dry-run --stop-on-violation",
             "vendor/bin/phpcpd ./ --exclude vendor",
-            "vendor/bin/psalm --show-info=true"
+            "vendor/bin/psalm --show-info=true --php-version=$(php -r \"echo phpversion();\")"
         ]
     }
 }
