--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -7,44 +7,30 @@ on:
     branches: [ main ]
 
 jobs:
-  build:
-
-    name: Random string generator (PHP ${{ matrix.php-versions }})
+    lint_and_test:
+    name: Lint and test (PHP ${{ matrix.php-versions }})
     runs-on: ubuntu-latest
     strategy:
       fail-fast: true
       matrix:
         php-versions: ['7.4', '8.0', '8.1']
-
     steps:
     - uses: actions/checkout@v2
-
     - name: Install PHP
       uses: shivammathur/setup-php@v2
       with:
         php-version: ${{ matrix.php-versions }}
-
-    - name: Check PHP Version
-      run: php -v
-
-    - name: Validate composer.json and composer.lock
-      run: composer validate
-
-    - name: Cache Composer packages
-      id: composer-cache
+    - name: Get composer cache directory
+      id: composer-cache-dir
+      run: echo "::set-output name=dir::$(composer config cache-files-dir)"
+    - name: Cache dependencies
       uses: actions/cache@v2
       with:
-        path: vendor
-        key: ${{ runner.os }}-php-${{ hashFiles('**/composer.lock') }}
-        restore-keys: |
-          ${{ runner.os }}-php-
-
+        path: ${{ steps.composer-cache-dir.outputs.dir }}
+        key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.json') }}
     - name: Install dependencies
-      if: steps.composer-cache.outputs.cache-hit != 'true'
-      run: composer install --prefer-dist --no-progress --no-suggest
-
-    - name: Run test suite
-      run: composer run-script test
-
+      run: composer install --prefer-dist --no-progress
     - name: Run linters
       run: composer run-script linter
+    - name: Run test suite
+      run: composer run-script test
