--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,7 @@
         "symfony/phpunit-bridge": "^5.0|^6.0",
         "friendsofphp/php-cs-fixer": "^3.0",
         "sebastian/phpcpd": "^6.0",
-        "vimeo/psalm": "^4.0",
-        "psalm/plugin-phpunit": "^0.16"
+        "vimeo/psalm": "^4.0|^5.0"
     },
     "autoload": {
         "psr-4": {
