--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -34,6 +34,8 @@ jobs:
       run: composer run-script linter
     - name: Run test suite
       run: composer run-script test
+    - name: Run infection
+      run: composer run-script infection
 
   symfony_installation:
     name: Test installation to Symfony (PHP ${{ matrix.php-versions }}, Symfony ${{ matrix.symfony-versions }})
