--- a/composer.json
+++ b/composer.json
@@ -5,11 +5,11 @@
     "keywords": ["php", "random string", "symfony"],
     "license": "MIT",
     "require": {
-        "php": ">=7.4.0",
+        "php": ">=8.1",
         "symfony/framework-bundle": "^5.0|^6.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^9.0|^10.0",
+        "phpunit/phpunit": "^9.0",
         "symfony/phpunit-bridge": "^5.0|^6.0",
         "friendsofphp/php-cs-fixer": "^3.0",
         "sebastian/phpcpd": "^6.0",
