--- a/composer.json
+++ b/composer.json
@@ -6,13 +6,13 @@
     "license": "MIT",
     "require": {
         "php": ">=8.1",
-        "symfony/framework-bundle": "^5.0|^6.0"
+        "symfony/framework-bundle": "^6.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^9.0",
-        "symfony/phpunit-bridge": "^5.0|^6.0",
+        "phpunit/phpunit": "^10.0",
+        "symfony/phpunit-bridge": "^6.0",
         "friendsofphp/php-cs-fixer": "^3.0",
-        "vimeo/psalm": "^4.0|^5.0",
+        "vimeo/psalm": "^5.0",
         "infection/infection": "^0.27.0"
     },
     "autoload": {
