--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<phpunit xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" colors="true" bootstrap="vendor/autoload.php" xsi:noNamespaceSchemaLocation="https://schema.phpunit.de/9.3/phpunit.xsd">
-  <coverage>
+<phpunit xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" colors="true" bootstrap="vendor/autoload.php" xsi:noNamespaceSchemaLocation="https://schema.phpunit.de/10.3/phpunit.xsd">
+  <coverage/>
+  <testsuites>
+    <testsuite name="Random string generator tests suit">
+      <directory>./Tests</directory>
+    </testsuite>
+  </testsuites>
+  <source>
     <include>
       <directory>.</directory>
     </include>
@@ -11,10 +17,5 @@
       <directory>./Tests</directory>
       <directory>./vendor</directory>
     </exclude>
-  </coverage>
-  <testsuites>
-    <testsuite name="Random string generator tests suit">
-      <directory>./Tests</directory>
-    </testsuite>
-  </testsuites>
+  </source>
 </phpunit>
