--- a/composer.json
+++ b/composer.json
@@ -6,15 +6,14 @@
     "license": "MIT",
     "require": {
         "php": ">=8.1",
-        "symfony/framework-bundle": "^5.0|^6.0"
+        "symfony/framework-bundle": "^6.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^9.0",
-        "symfony/phpunit-bridge": "^5.0|^6.0",
+        "phpunit/phpunit": "^10.0",
+        "symfony/phpunit-bridge": "^6.0",
         "friendsofphp/php-cs-fixer": "^3.0",
-        "sebastian/phpcpd": "^6.0",
-        "vimeo/psalm": "^4.0|^5.0",
-        "infection/infection": "^0.26.16"
+        "vimeo/psalm": "^5.0",
+        "infection/infection": "^0.27.0"
     },
     "autoload": {
         "psr-4": {
@@ -36,7 +35,6 @@
         ],
         "linter": [
             "vendor/bin/php-cs-fixer fix --config=.php-cs-fixer.dist.php -vv --allow-risky=yes --dry-run --stop-on-violation",
-            "vendor/bin/phpcpd ./ --exclude vendor",
             "vendor/bin/psalm --show-info=true --php-version=$(php -r \"echo phpversion();\")"
         ],
         "infection": [
