--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -13,7 +13,7 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        php-versions: ['8.1', '8.2']
+        php-versions: ['8.2']
     steps:
     - uses: actions/checkout@v2
     - name: Install PHP
@@ -84,7 +84,7 @@ jobs:
         run: |
           echo "APP_ENV=dev" > $SYMFONY_FOLDER/.env
           echo "APP_SECRET=test" >> $SYMFONY_FOLDER/.env
-          echo "DATABASE_URL=mysql://${DB_USERNAME}:${DB_PASSWORD}@127.0.0.1:${{ job.services.mysql.ports['3306'] }}/${DB_DATABASE}?serverVersion=5.7" >> $SYMFONY_FOLDER/.env
+          echo "DATABASE_URL=mysql://test:test@127.0.0.1:3306/test?serverVersion=5.7" >> $SYMFONY_FOLDER/.env
           echo "MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0" >> $SYMFONY_FOLDER/.env
       - name: Install module
         run: |
