--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "license": "MIT",
     "require": {
         "php": ">=8.1",
-        "symfony/framework-bundle": "^6.0"
+        "symfony/framework-bundle": "^6.0|^7.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^10.0",
