--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -13,7 +13,7 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        php-versions: ['8.2']
+        php-versions: ['8.2', '8.3']
     steps:
     - uses: actions/checkout@v2
     - name: Install PHP
@@ -43,8 +43,13 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        php-versions: ['8.1', '8.2']
-        symfony-versions: ['6.0', '6.1', '6.2', '6.3']
+        php-versions: ['8.1', '8.2', '8.3']
+        symfony-versions: ['6.3', '6.4']
+        include:
+          - php-versions: '8.2'
+            symfony-versions: '7.0'
+          - php-versions: '8.3'
+            symfony-versions: '7.0'
     env:
       SYMFONY_FOLDER: symfony_app
     steps:
