--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
         "symfony/phpunit-bridge": "^7.0",
         "friendsofphp/php-cs-fixer": "^3.0",
         "vimeo/psalm": "^5.0",
-        "infection/infection": "^0.27.0"
+        "infection/infection": "^0.27"
     },
     "autoload": {
         "psr-4": {
@@ -25,7 +25,7 @@
     },
     "scripts": {
         "test": [
-            "vendor/bin/phpunit --configuration phpunit.xml.dist"
+            "vendor/bin/phpunit --configuration phpunit.xml.dist --display-deprecations --display-phpunit-deprecations"
         ],
         "coverage": [
             "vendor/bin/phpunit --configuration phpunit.xml.dist --coverage-html=Tests/coverage"
