--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -24,7 +24,7 @@ jobs:
       id: composer-cache-dir
       run: echo "::set-output name=dir::$(composer config cache-files-dir)"
     - name: Cache dependencies
-      uses: actions/cache@v2
+      uses: actions/cache@v3
       with:
         path: ${{ steps.composer-cache-dir.outputs.dir }}
         key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.json') }}
@@ -44,14 +44,12 @@ jobs:
       fail-fast: false
       matrix:
         php-versions: ['8.1', '8.2', '8.3']
-        symfony-versions: ['6.3', '6.4']
+        symfony-versions: ['6.4']
         include:
-          - php-versions: '8.2'
-            symfony-versions: '7.0'
-          - php-versions: '8.3'
-            symfony-versions: '7.0'
           - php-versions: '8.3'
             symfony-versions: '7.1'
+          - php-versions: '8.3'
+            symfony-versions: '7.2'
     env:
       SYMFONY_FOLDER: symfony_app
     steps:
@@ -64,7 +62,7 @@ jobs:
           extensions: mbstring, dom, fileinfo, mysql, curl
       - name: Cache Symfony app
         id: symfony-app-cache
-        uses: actions/cache@v2
+        uses: actions/cache@v3
         with:
           path: symfony_app_tmp
           key: ${{ runner.os }}-symfony-${{ matrix.symfony-versions }}-${{ matrix.php-versions }}
