--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
         "symfony/framework-bundle": "^6.0|^7.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^11.0",
+        "phpunit/phpunit": "^11.0|^12.0",
         "symfony/phpunit-bridge": "^7.0",
         "friendsofphp/php-cs-fixer": "^3.0",
         "vimeo/psalm": "^6.0",
